chore: Change image

--- a/charts/pulse/values.yaml
+++ b/charts/pulse/values.yaml
@@ -17,7 +17,7 @@ mezmoApiAccessToken: ""
 logLevel: "info"
 
 image:
-  repository: us.gcr.io/logdna-k8s/vector
+  repository: mezmohq/vector
   pullPolicy: IfNotPresent
 
 service:
