--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -36,11 +36,10 @@ jobs:
         if: steps.list-changed.outputs.changed == 'true'
         run: ct lint --target-branch ${{ github.event.repository.default_branch }}
 
-    #   TODO: Re-enable once the image is public
-    #   - name: Create kind cluster
-    #     if: steps.list-changed.outputs.changed == 'true'
-    #     uses: helm/kind-action@v1.7.0
+      - name: Create kind cluster
+        if: steps.list-changed.outputs.changed == 'true'
+        uses: helm/kind-action@v1.7.0
 
-    #   - name: Run chart-testing (install)
-    #     if: steps.list-changed.outputs.changed == 'true'
-    #     run: ct install --target-branch ${{ github.event.repository.default_branch }}
+      - name: Run chart-testing (install)
+        if: steps.list-changed.outputs.changed == 'true'
+        run: ct install --target-branch ${{ github.event.repository.default_branch }}
