--- a/charts/edge/templates/hpa.yaml
+++ b/charts/edge/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "pulse.fullname" . }}
+  name: {{ include "edge.fullname" . }}
   labels:
-    {{- include "pulse.labels" . | nindent 4 }}
+    {{- include "edge.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "pulse.fullname" . }}
+    name: {{ include "edge.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
