--- a/charts/edge/Chart.yaml
+++ b/charts/edge/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
-name: pulse
+name: edge
 home: https://www.mezmo.com
 icon: https://app.mezmo.com/assets/img/mz-logo-square-128.png
-description: A Helm chart for deploying Mezmo Pulse
+description: A Helm chart for deploying Mezmo Edge
 type: application
 appVersion: "1.17.3"
-version: 0.3.1
+version: 0.4.0
 maintainers:
   - name: Mezmo
     email: help@mezmo.com
