--- a/charts/edge/templates/configmap.yaml
+++ b/charts/edge/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "pulse.fullname" . }}
+  name: {{ include "edge.fullname" . }}
   labels:
-    {{- include "pulse.labels" . | nindent 4 }}
+    {{- include "edge.labels" . | nindent 4 }}
 data:
   processor.yaml: |
     provider:
