--- a/charts/edge/templates/secret-api-access-token.yaml
+++ b/charts/edge/templates/secret-api-access-token.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "pulse.fullname" . }}
+  name: {{ include "edge.fullname" . }}
   labels:
-    {{- include "pulse.labels" . | nindent 4 }}
+    {{- include "edge.labels" . | nindent 4 }}
 {{- if .Values.secretAnnotations }}
   annotations: {{ toYaml .Values.secretAnnotations | nindent 4 }}
 {{- end }}
