--- a/charts/edge/templates/service.yaml
+++ b/charts/edge/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "pulse.fullname" . }}
+  name: {{ include "edge.fullname" . }}
   labels:
-    {{- include "pulse.labels" . | nindent 4 }}
+    {{- include "edge.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   selector:
-    {{- include "pulse.selectorLabels" . | nindent 4 }}
+    {{- include "edge.selectorLabels" . | nindent 4 }}
   ports:
     {{- range .Values.service.servicePorts }}
     - name: {{ .name }} 
