feat(values): add default port start/end
Users do not need to specify a range for default

ref: LOG-18744

--- a/charts/edge/values.yaml
+++ b/charts/edge/values.yaml
@@ -30,8 +30,8 @@ service:
       targetPort: 8686
   # Ports that are mapped to Pipeline sources
   sourcePorts:
-    start: ""
-    end: ""
+    start: 8000
+    end: 8010
 
 replicaCount: 1
 autoscaling:
