chore: make port start/end inclusive of end
This matches preexisting validation logic in the app.
Also refine some docs in the readme making this explicit.

ref: LOG-18744

--- a/charts/edge/templates/service.yaml
+++ b/charts/edge/templates/service.yaml
@@ -15,7 +15,7 @@ spec:
       targetPort: {{ .targetPort }}
       protocol: {{ .protocol }}
     {{- end }}
-    {{- range untilStep (.Values.service.sourcePorts.start|int) (.Values.service.sourcePorts.end|int) 1 }}
+    {{- range untilStep (.Values.service.sourcePorts.start|int) (add1 .Values.service.sourcePorts.end | int) 1 }}
     - port: {{ . }}
       targetPort: {{ . }}
       protocol: UDP
