feat(edge): add config value for discrete source ports
Allows non-contiguous ports configured as a list.

ref: LOG-18744

--- a/charts/edge/templates/service.yaml
+++ b/charts/edge/templates/service.yaml
@@ -17,11 +17,15 @@ spec:
     {{- end }}
     {{- range untilStep (.Values.service.sourcePorts.start|int) (add1 .Values.service.sourcePorts.end | int) 1 }}
     - port: {{ . }}
-      targetPort: {{ . }}
-      protocol: UDP
-      name: "udp-{{ . }}"
-    - port: {{ . }}
-      targetPort: {{ . }}
-      protocol: TCP
       name: "tcp-{{ . }}"
+    - port: {{ . }}
+      name: "udp-{{ . }}"
+      protocol: UDP
+    {{- end }}
+    {{- range (.Values.service.sourcePorts.list) }}
+    - port: {{ . }}
+      name: "tcp-{{ . }}"
+    - port: {{ . }}
+      name: "udp-{{ . }}"
+      protocol: UDP
     {{- end }}
