feat: allow specifying existing token secret
Adds a `mezmoApiAccessSecret` option to use instead of a manually
specified access token

ref: LOG-19426

--- a/charts/edge/templates/statefulset.yaml
+++ b/charts/edge/templates/statefulset.yaml
@@ -64,7 +64,7 @@ spec:
           - name: MEZMO_LOCAL_DEPLOY_AUTH_TOKEN
             valueFrom:
               secretKeyRef:
-                name: {{ include "edge.fullname" . }}
+                {{ include "edge.tokenSecretRef" . | nindent 16  }}
                 key: api-access-token
           - name: MEZMO_METRICS_ENDPOINT_URL
             value: "{{include "edge.mezmoApiBaseUrl" . }}/v3/pipeline/account/local-deploy/metric/usage?edge_id={{include "edge.Id" . | urlquery }}"
