fix(persistence): allow daemonset deployments to have host persistence
PVCs won't work for daemonsets very easily.  Provide a default mechanism
for saving state in a daemonset

ref: LOG-22224

--- a/charts/edge/templates/daemonset.yaml
+++ b/charts/edge/templates/daemonset.yaml
@@ -28,12 +28,9 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       volumes:
         - name: data
-          {{- if .Values.pvcName }}
-          persistentVolumeClaim:
-            claimName: {{ .Values.pvcName | quote }}
-          {{- else }}
-          emptyDir: {}
-          {{- end }}
+          hostPath:
+            path: {{ .Values.daemonsetVolumeHostPath | quote }}
+            type: DirectoryOrCreate
         - name: config
           projected:
             sources:
