chore(release): update base edge image
update our base image to latest stable version, bringing in fixes and
optimizations from both internal and upstream.

also update container repository location

ref: LOG-22294

--- a/charts/edge/values.yaml
+++ b/charts/edge/values.yaml
@@ -37,7 +37,7 @@ remoteTaskExecutionTimeout: "60"
 logLevel: "info"
 
 image:
-  repository: mezmohq/vector
+  repository: mezmo/vector
   pullPolicy: IfNotPresent
 
 service:
