fix(k8s paths): adding ability to add paths to k8s source
underlying system only looks at /var/log/pods/**, we provide the ability
in edge pipelines to add additional glob paths.  Those paths need to be
included in the helm templates so they can be added as read-only volumes
in the pod spec

ref: LOG-22636

--- a/charts/edge/values.yaml
+++ b/charts/edge/values.yaml
@@ -90,6 +90,7 @@ securityContext: {}
 imagePullSecrets: []
 
 enableK8sLogs: false
+k8sAdditionalHostPaths: {}
 
 # Optional PersistentVolumeClaim name to use for default storage in statefulset deployments
 pvcName: ""
