--- a/charts/edge/templates/daemonset.yaml
+++ b/charts/edge/templates/daemonset.yaml
@@ -43,6 +43,13 @@ spec:
         - hostPath:
             path: /var/lib/
           name: var-lib
+        {{- with .Values.k8sAdditionalHostPaths }}
+        {{- range . }}
+        - name: {{ .name }}
+          hostPath:
+            path: {{ .path }}
+        {{- end }}
+        {{- end }}
         {{- end }}
       terminationGracePeriodSeconds: 60
       containers:
@@ -123,6 +130,13 @@ spec:
             - mountPath: /var/lib/
               name: var-lib
               readOnly: true
+            {{- with .Values.k8sAdditionalHostPaths }}
+            {{- range . }}
+            - name: {{ .name }}
+              mountPath: {{ .path }}
+              readOnly: true
+            {{- end }}
+            {{- end }}
             {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
